@@ -82,6 +82,9 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.0/
  * The `XHTMLSerializer` now has a `drop_xml_decl` option that defaults to
    `True`. Setting it to `False` will cause any XML decl in the serialized
    stream to be included in the output as it would for XML serialization.
+ * Add support for a protocol that would allow interoperability of different
+   Python packages that generate and/or consume markup, based on the special
+   `__html__()` method (ticket #202).
 
 
 Version 0.4.4
